<resources>
    <string name="app_name">ORU Mobile Diagnostics</string>
    <string name="sprint_text">ORU Mobile\nDiagnostics</string>
    <string name="mobile_diagnostics">ORU Diagnostics</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="full_diagnostics">Full diagnostics</string>
    <string name="additional_tests">Additional tests</string>
    <string name="diagnostics_infotext">Choose additional tests</string>
    <string name="assisted">Call Center</string>
    <string name="icon_quality">30</string>
    <string name="airplane_message">Please Turn Off Airplane Mode</string>
    <string name="location_text">Location is Enabled</string>
    <string name="picture_toast">Tap to take a picture</string>
    <string name="record_toast">Tap to record</string>
    <string name="play_toast">Tap to play</string>
    <string name="fail_warning">Do you want to fail the test?</string>
    <string name="bluetooth_toast">No nearby devices detected.</string>
    <string name="devicename_toast">Bluetooth Scan Test passed.\n Device(s) scanned:\n BT Device - %1$s</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="agree">I AGREE</string>
    <string name="cancel">I DISAGREE</string>
    <string name="cancel_settings">I DISAGREE</string>
    <string name="settings">Settings</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="check_my_device">CHECK MY DEVICE</string>
    <string name="analyse_my_device">Analyze my device</string>
    <string name="accept_permissions">Accept Permissions</string>
    <string name="accept_permissions_msg"> The App requires a few mandatory permissions in order to function properly. Allow all permissions when prompted. Tap on OK to continue and Cancel to exit the App.</string>
    <string name="accept_permissions_msg2">Some permissions were denied. All permissions are mandatory for the App to function properly. Allow all permissions when prompted again. Tap on OK to continue or Cancel to exit the App.</string>
    <string name="accept_permissions_msg3">Some required permissions by the app were still denied. Tap on Settings and then tap on Permissions to manually enable all permissions</string>
    <string name="initializing_tests">Initializing Tests</string>
    <string name="please_wait">Please wait...</string>
    <string name="loading">Loading</string>
    <string name="manualtest_selection">Please select at-least one item to continue.</string>
    <string name="manualtest_result_dialog">Test is failed</string>
    <string name="test">Test</string>
    <string name="complete">Full test</string>
    <string name="categories">Categories</string>
    <string name="history">History</string>
    <string name="no_history_text">No History</string>
    <string name="pick_a_test">Select Problem Category</string>
    <string name="empty_result">No tests are performed</string>
    <string name="txt_below_analyze_my_device">Analyze my device will perform all automatic tests and give you the option to select additional manual tests.</string>
    <string name="str_storage">Storage</string>
    <string name="str_total_storage">Total Storage</string>
    <string name="str_storage_available">Storage Available</string>
    <string name="str_apn">APN</string>
    <string name="str_mobile_data">Mobile Data</string>
    <string name="str_wifi">WIFI</string>
    <string name="str_network_mode">Network Mode</string>
    <string name="str_volte_calls">VoLTE Calls</string>
    <string name="autotests">Auto Tests</string>
    <string name="analysing">Analyzing</string>
    <string name="str_skip">SKIP</string>
    <string name="str_skip_test">SKIP TEST</string>
    <string name="str_continue">CONTINUE</string>
    <string name="manual_tests_selection_btn_continue">Continue</string>
    <string name="str_start_test">START</string>
    <string name="str_yes">YES</string>
    <string name="str_no">NO</string>
    <string name="str_ok">OK</string>
    <string name="ok">OK</string>
    <string name="alert">Alert</string>
    <string name="btn_retry">RETRY</string>
    <string name="btn_retest">Retest</string>
    <string name="btn_go_offline">PROCEED OFFLINE</string>
    <string name="btn_exit">Exit</string>
    <string name="network_msz">Please check your internet connection and try again.</string>
    <string name="storage_msg">Storage is full. Free up some space to perform the test.</string>
    <string name="time_out_msg_advance_flow">Do you need more time?</string>
    <string name="server_not_rechable">Server not reachable</string>
    <string name="server_unavailable_msg">We\’re not able to reach the server. Your transaction data will not be saved.</string>
    <string name="checking">Checking</string>
    <string name="gotoresults">Go to results</string>
    <string name="addManualtests">ADD MANUAL TESTS</string>
    <string name="auto_tests_completed">All automatic tests complete.</string>
    <string name="suggested_fixes">Suggested Fixes</string>
    <string name="rate_us_heading"></string>
    <string name="rate_us_desc">We hope that you are enjoying using ORUphones app.\nPlease take a moment to rate us on the app store</string>
    <string name="rate_us_btn">Rate Us</string>
    <string name="rate_us_Remind">Remind me Later</string>
    <string name="rate_us_no">No, Thanks</string>
    <string name="result_text">Test Results</string>
    <string name="all_test_complete">All tests completed</string>
    <string name="no_issue_have_been_found">No Fixes available</string>
    <string name="detailed_result">Detailed Results</string>
    <string name="auto_tests">Auto Tests</string>
    <string name="manual_tests">Diagnostic Tests</string>
    <string name="done">Done</string>
    <string name="history_title">Diagnostics History</string>
    <string name="ambientligt_test">Light Test</string>
    <string name="ambient_try_message">Place your hand over the top of the phone.\nNote: Ensure that you are in a bright area while performing the test.</string>
    <string name="ambient_message">Move your hand over the top of the phone to test the ambient light sensor.</string>
    <string name="accelerometer_test">Acceleromter Test</string>
    <string name="accelerometer_try_message">Rotate your device to change the display between vertical and horizontal views. </string>
    <string name="accelerometer_result_message">Did the image on the screen rotate correctly? </string>
    <string name="proximity_test">Proximity Test</string>
    <string name="proximity_try_message">Move your palm very close to top half of the device first and then move your palm back and forth from left to right.</string>
    <string name="proximity_message">Place your hand over the Proximity Sensor as shown in the image.</string>
    <string name="guesture_test">Gesture Test</string>
    <string name="guesture_try_message">Wave your hand over the sensor as shown. The test should pass automatically. </string>
    <string name="str_gesture_up">Up</string>
    <string name="str_gesture_down">Down</string>
    <string name="str_gesture_left">Left</string>
    <string name="str_gesture_right">Right</string>
    <string name="microphone_test">Microphone Test</string>
    <string name="microphone_test_try_message">Speak into the microphone and listen to the playback from the speaker.</string>
    <string name="microphone_record_message"> Tap on \'Record\' and speak to record the audio.</string>
    <string name="microphone_play_message">Tap on \'Play\' and listen to the recorded audio.</string>
    <string name="recording">Recording</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="recording_done">Recording Done</string>
    <string name="recording_start">Recording started</string>
    <string name="microphone_not_started">Microphone could not be started</string>
    <string name="microphone_test_play_description">Listen to the captured audio</string>
    <string name="microphone_result_message">Did you hear the recorded audio?</string>
    <string name="audio_source_error">Error in Audio Source</string>
    <string name="microphone2_test">Mic2 Test</string>
    <string name="media_recorder_error">Error in preparing Media Recorder</string>
    <string name="media_server_died">Media Server Died</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="insufficient_storage">Insufficient Storage</string>
    <string name="microphone_test_suggestion">• Check for blocked openings \n• Remove the screen case \n• Clean the microphone openings \n• Unplug any accessories(Bluetooth or any other)\n\n Tap on \'Retry\' if you want to perform the test again, else tap on \'Fail\' to fail the test.</string>
    <string name="hardkey_test">Hard keys test</string>
    <string name="hardkey_try_messaage">Test device buttons by pressing each one.</string>
    <string name="hardKey_Desc">Test the device buttons by pressing each shown below.</string>
    <string name="key_result_message">Do all the circles have a checkmark?</string>
    <string name="endtest">END TEST</string>
    <string name="relauch_msg">Please wait for app to relaunch.</string>
    <string name="softkey_test">Soft Keys Test</string>
    <string name="softkey_try_message">Test the soft keys on your device by touching each one.</string>
    <string name="about">About</string>
    <string name="here_data_send">
<b>Here\'s is the data we\'ll access to help make our services better. </b>
</string>
    <string name="network_access">• IMEI</string>
    <string name="device_manufacture">• Device Manufacturer</string>
    <string name="device_model">• Device Model</string>
    <string name="os_version">• OS Version</string>
    <string name="device_features">• Device Features</string>
    <string name="battery_health">• Battery Health</string>
    <string name="apps_installed">• Apps installed on the device. (Note: We do not store this information anywhere)</string>
    <string name="device_info_imei">IMEI </string>
    <string name="endsession_message">Thank you</string>
    <string name="endsession_name">Pervacio\nAssisted Diagnostics</string>
    <string name="endsession_suggestion">In order for your improvements to complete, please uninstall Pervacio diagnostics app and reboot your device.</string>
    <string name="end_session">End Session</string>
    <string name="rap_title" translatable="false">Report a problem</string>
    <string name="rap_h" translatable="false">Enter the issue details below and tap send.</string>
    <string name="required" translatable="false">*required</string>
    <string name="rap_description_h" translatable="false">Description</string>
    <string name="rap_description_hint" translatable="false">Enter the description here</string>
    <string name="rap_name_h" translatable="false">Name</string>
    <string name="rap_name_hint" translatable="false">Enter your name</string>
    <string name="rap_phone_h" translatable="false">Phone Number</string>
    <string name="rap_phone_hint" translatable="false">Enter your phone number</string>
    <string name="rap_send" translatable="false">Send</string>
    <string name="rap_info_text" translatable="false">Error logs be included with this report. No personal information is collected.for more information please review the Content Protection Policy</string>
    <string name="Failed_auto_test_text">The following tests have failed but don’t worry, we’ll perform these tests again !</string>
    <string name="manual_test_list">Manual test list</string>
    <string name="okay">Okay</string>
    <string name="time">time</string>
    <string name="roboto_light">roboto_light.ttf</string>
    <string name="roboto_regular">roboto_regular.ttf</string>
    <string name="Aileron_Light">aileron_light.ttf</string>
    <string name="rate_oruphones">Rate Oruphones</string>
</resources>