<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/custom_oval_design">
    <TextView
        android:id="@+id/header_data_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/here_data_send"
        android:layout_marginLeft="@dimen/r_margin_left"
        android:paddingTop="@dimen/r_padding_top"
        android:textSize="@dimen/r_header_size"
        />
    <LinearLayout
        android:id="@+id/list_data_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/r_padding_top_header"
        android:paddingBottom="@dimen/r_padding_top_header"
        android:layout_marginLeft="@dimen/r_margin_left">
        <TextView
            android:id="@+id/device_manufature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_manufacture"
            android:textSize="@dimen/r_text_size"/>
        <TextView
            android:id="@+id/device_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_model"
            android:textSize="@dimen/r_text_size"/>
        <TextView
            android:id="@+id/OS_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/os_version"
            android:textSize="@dimen/r_text_size"/>
    <TextView
        android:id="@+id/device_feature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_features"
        android:textSize="@dimen/r_text_size"/>

    <TextView
        android:id="@+id/batteryhealth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/battery_health"
        android:textSize="@dimen/r_text_size"/>
    <TextView
        android:id="@+id/apps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apps_installed"
        android:textSize="@dimen/r_text_size"/>
        <TextView
            android:id="@+id/network_access"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/network_access"
            android:textSize="@dimen/r_text_size"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main_bg_gray"/>
    <Button
        android:id="@+id/read_alert_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/r_button_margin_right"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/str_yes"
        android:textAppearance="@style/textStyle_button" />

</LinearLayout>
