<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/history_result_list_height"
    android:orientation="horizontal"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/history_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/history_res_list_text_padding"
            android:paddingBottom="@dimen/category_text_padding"
            android:paddingTop="@dimen/category_text_padding"
            android:text="@string/check_my_device"
            android:textColor="@color/black"
            android:fontFamily="@string/roboto_regular"
            android:textSize="@dimen/category_text_size" />

        <TextView
            android:id="@+id/history_sub_text_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_my_device"
            android:visibility="gone"
            android:textSize="@dimen/category_sub_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:gravity="center|right">

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/history_res_list_text_padding"
            android:text="@string/time"
            android:fontFamily="@string/roboto_light"
            android:textSize="@dimen/category_sub_text_size" />
    </LinearLayout>




</LinearLayout>
