<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/exit"
        android:icon="@drawable/ic_exit"
        android:title="@string/btn_exit"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/sprint"
        android:showAsAction="withText"
        android:title="Link to Sprint.com"
        android:visible="false"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/settings"
        android:showAsAction="withText"
        android:title="Settings"
        android:visible="false"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/about"
        android:showAsAction="withText"
        android:title="@string/about"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/reportAProblem"
        android:showAsAction="withText"
        android:title="@string/rap_title"
        tools:ignore="AppCompatResource"
        android:visible="false"
        />

    <item
        android:id="@+id/copyLogs"
        android:showAsAction="withText"
        android:title="Copy Logs"
        tools:ignore="AppCompatResource"
        android:visible="false"
        />
</menu>