<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    app:cardElevation="10dp"
    android:id="@+id/ManualAlertDialog"
    android:layout_width="250dp"
    android:layout_margin="10dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">


    <LinearLayout
        android:padding="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/poppins"
            android:gravity="start"
            android:text="@string/Failed_auto_test_text"
            android:textColor="@color/primary_color"
            android:textSize="12sp" />


        <TextView
            android:fontFamily="@font/poppins"
            android:textColor="#000000"
            android:layout_margin="10dp"
            android:id="@+id/messageTextView"
            android:paddingStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manual_test_list"
            android:textSize="12sp"/>


        <Button
            android:gravity="center"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:id="@+id/OkBtn"
            android:textSize="16sp"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:text="@string/okay"/>
    </LinearLayout>


</androidx.cardview.widget.CardView>